--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,9 +1,9 @@
 //COLORS
 
-$primary: #3F51B5;
-$primary-dark: #303F9F;
-$primary-light: #C5CAE9;
-$accent: #FF4081;
+$primary: #9C27B0;
+$primary-dark: #7B1FA2;
+$primary-light: #E1BEE7;
+$accent: #4CAF50;
 $icons: #FFFFFF;
 $primary-text: #212121;
 $secondary-text: #757575;
@@ -12,7 +12,7 @@ $black: rgb(0, 0, 0);
 $white: rgb(255, 255, 255);
 $success: #8BC34A;
 $warn: #FF5722;
-$fail: #D32F2F;
+$fail: #FF5252;
 
 $colors-map: (
   primary: $primary,
