redesign the login page

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -7,12 +7,16 @@ $accent: #4CAF50;
 $icons: #FFFFFF;
 $primary-text: #212121;
 $secondary-text: #757575;
+$black: #000;
 $divider: #BDBDBD;
 $black: rgb(0, 0, 0);
 $white: rgb(255, 255, 255);
 $success: #8BC34A;
 $warn: #FF5722;
 $fail: #FF5252;
+$light-bg: rgb(244,244,248);
+$line: rgb(245,245,245);
+$light-hover: rgb(246,246,246);
 
 $colors-map: (
   primary: $primary,
