--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -3,6 +3,9 @@
 $primary: #9C27B0;
 $primary-dark: #7B1FA2;
 $primary-light: #E1BEE7;
+$blue-light: rgba(16, 148, 247, 0.2);
+$blue-1: #0c70bc;
+$blue-2: #0f88e3;
 $accent: #4CAF50;
 $icons: #FFFFFF;
 $primary-text: #212121;
