Reworked verify account reminder

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -9,7 +9,7 @@ $blue-2: #0f88e3;
 $accent: #4CAF50;
 $icons: #FFFFFF;
 $primary-text: #212121;
-$secondary-text: #757575;
+$secondary-text: #fff;
 $black: #000;
 $divider: #BDBDBD;
 $black: rgb(0, 0, 0);
@@ -36,4 +36,4 @@ $colors-map: (
   fail: $fail
 );
 
-$border-radius: 0.5em;
+$border-radius: 2em;
