--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -135,19 +135,28 @@ html, body {
 }
 
 h1 {
-  font-size: 28px;
+  font-size: 2em;
+  margin: 0.5em 0;
 }
 
 h2 {
-  font-size: 26px;
+  font-size: 1.5em;
 }
 
 h3 {
-  font-size: 24px;
+  font-size: 1.25em;
 }
 
 h4 {
-  font-size: 22px;
+  font-size: 1.1em;
+}
+
+h5 {
+  font-size: 0.9em;
+}
+
+h6 {
+  font-size: 0.8em;
 }
 
 //BUTTONS
