--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -3,7 +3,6 @@
 $primary: #9C27B0;
 $primary-dark: #7B1FA2;
 $primary-light: #E1BEE7;
-$blue-light: rgba(16, 148, 247, 0.2);
 $accent: #4CAF50;
 $icons: #FFFFFF;
 $primary-text: #212121;
@@ -35,3 +34,27 @@ $colors-map: (
 );
 
 $border-radius: 2em;
+
+// LOGIN PAGE
+
+$login_header: $primary;
+$login_header_height: 95px;
+$login_header_shadow: none;
+$login_header_border: 0px;
+$login_header_padding: 0 0 1.5rem;
+$login_header_text_size: 1rem;
+$login_background: $light-bg;
+$login_box_header: #FFFFFF;
+$login_box_background: #FFFFFF;
+$login_box_border: 1px solid darken($light-bg, 10);
+$login_text: #143261;
+$login_label_text_size: 0.75rem;
+$login_shadow: 0 20px 44px 0 rgba(119,135,139,0.6);
+$login_button_background: #194282;
+$login_button_min_width: 280px;
+$login_button_min_height: 90px;
+$login_box_min_width: 650px;
+$login_box_padding: 2rem;
+$login_box_margin: 0;
+$login_checkbox_colour: $login_button_background;
+$login_logo_text: #FFFFFF;
