--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -58,3 +58,9 @@ $login_box_padding: 2rem;
 $login_box_margin: 0;
 $login_checkbox_colour: $login_button_background;
 $login_logo_text: #FFFFFF;
+
+$header_background: $primary;
+
+$sidebar_border: 0;
+$sidebar-shadow: none;
+
