--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -63,4 +63,6 @@ $header_background: $primary;
 
 $sidebar_border: 0;
 $sidebar-shadow: none;
-
+$sidebar_text_size: 1rem;
+$sidebar_menu_padding_top: 0em;
+$sidebar_hamburger_colour: #FFFFFF;
