--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -3,28 +3,28 @@ Enable the specific ones you want to use, do not enable all!
 
 @font-face {
   font-family: 'Montserrat-Light';
-  src: url('../fonts/Montserrat-Light.ttf') format('truetype');
+  src: url('/fonts/Montserrat-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat-LightItalic';
-  src: url('../fonts/Montserrat-LightItalic.ttf') format('truetype');
+  src: url('/fonts/Montserrat-LightItalic.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Montserrat-Medium';
-  src: url('../fonts/Montserrat-Light.ttf') format('truetype');
+  src: url('/fonts/Montserrat-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat-MediumItalic';
-  src: url('../fonts/Montserrat-MediumItalic.ttf') format('truetype');
+  src: url('/fonts/Montserrat-MediumItalic.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
 }
@@ -47,7 +47,7 @@ Enable the specific ones you want to use, do not enable all!
 /**
 @font-face {
   font-family: 'Montserrat-Italic';
-  src: url('../fonts/Montserrat-Regular.ttf') format('truetype');
+  src: url('/fonts/Montserrat-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
 }
@@ -55,49 +55,49 @@ Enable the specific ones you want to use, do not enable all!
 
 @font-face {
   font-family: 'Montserrat-SemiBoldItalic';
-  src: url('../fonts/Montserrat-SemiBoldItalic.ttf') format('truetype');
+  src: url('/fonts/Montserrat-SemiBoldItalic.ttf') format('truetype');
   font-weight: 600;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Montserrat-Black';
-  src: url('../fonts/Montserrat-Black.ttf') format('truetype');
+  src: url('/fonts/Montserrat-Black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat-BlackItalic';
-  src: url('../fonts/Montserrat-BlackItalic.ttf') format('truetype');
+  src: url('/fonts/Montserrat-BlackItalic.ttf') format('truetype');
   font-weight: 900;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Montserrat-Bold';
-  src: url('../fonts/Montserrat-Bold.ttf') format('truetype');
+  src: url('/fonts/Montserrat-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat-BoldItalic';
-  src: url('../fonts/Montserrat-BoldItalic.ttf') format('truetype');
+  src: url('/fonts/Montserrat-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Montserrat-ExtraBold';
-  src: url('../fonts/Montserrat-ExtraBold.ttf') format('truetype');
+  src: url('/fonts/Montserrat-ExtraBold.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat-ExtraBoldItalic';
-  src: url('../fonts/Montserrat-ExtraBoldItalic.ttf') format('truetype');
+  src: url('/fonts/Montserrat-ExtraBoldItalic.ttf') format('truetype');
   font-weight: 800;
   font-style: italic;
 }
