Use custom fonts and colours in the sidebar

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -69,3 +69,8 @@ $sidebar-shadow: none;
 $sidebar_text_size: 1rem;
 $sidebar_menu_padding_top: 0em;
 $sidebar_hamburger_colour: #FFFFFF;
+$sidebar_icon_colour: #AAAAAA;
+$sidebar_icon_size: 20px;
+$sidebar_active_text_colour: $accent;
+$sidebar_active_icon_colour: $accent;
+$sidebar_active_text_font: 'Montserrat-SemiBold';
