Integrate toaster component

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -74,3 +74,5 @@ $sidebar_icon_size: 20px;
 $sidebar_active_text_colour: $accent;
 $sidebar_active_icon_colour: $accent;
 $sidebar_active_text_font: 'Montserrat-SemiBold';
+
+@import "./_forms.scss";
