--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -49,10 +49,10 @@ $login_background: $light-bg;
 $login_box_header: #FFFFFF;
 $login_box_background: #FFFFFF;
 $login_box_border: 1px solid darken($light-bg, 10);
-$login_text: #143261;
+$login_text: #000000;
 $login_label_text_size: 0.75rem;
 $login_shadow: 0 20px 44px 0 rgba(119,135,139,0.6);
-$login_button_background: #194282;
+$login_button_background: $primary;
 $login_button_min_width: 250px;
 $login_button_min_height: 50px;
 $login_box_min_width: 650px;
@@ -61,6 +61,30 @@ $login_box_margin: 0;
 $login_checkbox_colour: $login_button_background;
 $login_logo_text: #FFFFFF;
 $login_logo_margin: 1em;
+
+$signup_header: #FFFFFF;
+$signup_header_height: 95px;
+$signup_header_shadow: none;
+$signup_header_border: 0px;
+$signup_header_padding: 0 0 1.5rem;
+$signup_header_text_size: 1rem;
+$signup_background: $light-bg;
+$signup_box_header: #FFFFFF;
+$signup_box_background: #FFFFFF;
+$signup_box_border: 1px solid darken($light-bg, 10);
+$signup_text: $primary;
+$signup_label_text_size: 0.85rem;
+$signup_shadow: 0 20px 44px 0 rgba(119,135,139,0.6);
+$signup_button_background: $primary;
+$signup_button_min_width: 280px;
+$signup_button_min_height: 90px;
+$signup_box_min_width: 650px;
+$signup_box_padding: 2rem 2rem 0;
+$signup_box_margin: 0;
+$signup_checkbox_colour: $login_button_background;
+$signup_logo_text: #5C5C5C;
+$signup_logo_margin: 0 2rem;
+$signup_input_margin: 0.5rem;
 
 $header_background: $primary;
 
