Integrate latest version of signup component

--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -111,3 +111,8 @@ span.validation-error {
   color: $fail;
   font-size: .9em;
 }
+
+// Signup phone number input hack
+#personalmobile {
+  border: none !important;
+}
