--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -1,18 +1,20 @@
+@import "./_fonts.scss";
+
 html, body {
   height: 100%;
   padding: 0;
   margin: 0;
-  background-color: $white;
-  color: $primary-text;
+  background-color: colour("white");
+  color: colour("primary", "text");
   overflow: hidden;
 }
 
 //TEXT
-@each $color, $value in $colors-map {
-  .text-#{$color} {
-    color: #{$value}
-  }
-}
+// @each $color, $value in $colors-map {
+  // .text-#{$color} {
+    // color: #{$value}
+  // }
+// }
 
 .strong {
   font-weight: bold;
