--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -4,8 +4,8 @@ html, body {
   height: 100%;
   padding: 0;
   margin: 0;
-  background-color: colour("white");
-  color: colour("primary", "text");
+  background-color: colour(white);
+  color: colour(primary, text);
   overflow: hidden;
 }
 
