--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,6 +1,14 @@
 // @import "./_fonts.scss";
+@import 'helpers';
 @import 'variables/palette';
 @import 'variables/typography';
+@import 'variables/radius';
+@import 'variables/borders';
+@import 'variables/duration';
+@import 'variables/easing';
+@import 'variables/shadows';
+@import 'variables/spacing';
+@import 'variables/z-index';
 
 //COLORS
 
