--- a/src/assets/sass/variables/palette.scss
+++ b/src/assets/sass/variables/palette.scss
@@ -1,5 +1,4 @@
 // stylelint-disable color-no-hex, function-max-empty-lines, value-list-max-empty-lines
-
 $color-palette-data: (
   white: (
     base: #ffffff
@@ -73,59 +72,6 @@ $color-palette-data: (
   )
 );
 
+// UK and US spelling alias
 $colour-palette-data: $color-palette-data;
-
-/// Returns the color value for a given color name and group.
-///
-/// @param {String} $hue - The color's hue.
-/// @param {String} $value - The darkness/lightness of the color. Defaults to base.
-/// @param {Color} $for-background - The background color on which this color will
-/// appear. Applies a multiply filter to ensure appropriate contrast.
-/// @return {Color} The color value.
-
-@function color($hue, $value: base, $for-background: null) {
-  $map: map-get($color-palette-data, $hue);
-  $fetched-color: map-get($map, $value);
-
-  @if map-has-key($color-palette-data, $fetched-color) {
-    $fetched-color: map-get(map-get($color-palette-data, $fetched-color), $value);
-  }
-
-  @if $for-background != null {
-    $fetched-color: color-multiply($fetched-color, $for-background);
-  }
-
-  @if type-of($fetched-color) == color {
-    @return $fetched-color;
-  } @else {
-    @error 'Color `#{$hue} - #{$value}` not found. Available colors: #{available-names($color-palette-data)}';
-  }
-}
-
-// Alias
-@function colour($hue, $value: base, $for-background: null) {
-  @return color($hue, $value, $for-background);
-}
-
-
-/// Darkens the foreground color by the background color. This is the same as the
-/// “multiply” filter in graphics apps.
-///
-/// @param {Color} $foreground - The color to darken.
-/// @param {Color} $background - The background to base darkening on.
-/// @return {Color} The modified color.
-
-@function color-multiply($foreground, $background: null) {
-  @if $background == null {
-    $background: #ffffff;
-  }
-
-  @return $foreground * $background / 255;
-}
-
-// Alias
-@function colour-multiply($foreground, $background: null) {
-  @return color-multiply($foreground, $background);
-}
-
 // stylelint-enable color-no-hex, function-max-empty-lines, value-list-max-empty-lines
