--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1,4 +1,5 @@
 @import 'styles/foundation';
+@import 'styles/mixins';
 @import 'styles/shared';
 @import 'styles/global';
 @import 'styles/components';
