--- a/src/assets/sass/helpers/utilities.scss
+++ b/src/assets/sass/helpers/utilities.scss
@@ -1,3 +1,6 @@
+$default-browser-font-size: 16px;
+$base-font-size: 10px;
+
 /// Returns the value in rem for a given pixel value.
 /// @param {Number} $value - The pixel value to be converted.
 /// @return {Number} The converted value in rem.
