Refactored the button styles

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -5,6 +5,7 @@
 @import "helpers/utilities.scss";
 @import 'variables/spacing';
 @import 'variables/layout';
+@import 'variables/buttons';
 @import 'variables/typography';
 @import 'variables/radius';
 @import 'variables/borders';
@@ -12,6 +13,8 @@
 @import 'variables/easing';
 @import 'variables/shadows';
 @import 'variables/z-index';
+@import 'variables/backgrounds';
+@import 'variables/buttons';
 @import 'helpers';
 @import 'mixins';
 
