--- a/src/assets/sass/helpers.scss
+++ b/src/assets/sass/helpers.scss
@@ -4,6 +4,7 @@
 @import 'helpers/palette';
 @import 'helpers/radius';
 @import 'helpers/borders';
+@import 'helpers/backgrounds';
 @import 'helpers/duration';
 @import 'helpers/easing';
 @import 'helpers/shadows';
