--- a/src/assets/sass/mixins/buttons.scss
+++ b/src/assets/sass/mixins/buttons.scss
@@ -1,81 +1,65 @@
-@mixin button-filled($button-color, $focus-color, $outline-color: null) {
-  line-height: 0;
+@mixin base-button() {
   display: flex;
+  line-height: 0;
+  margin: 0;
   align-items: center;
   justify-content: center;
-  color: colour(white);
-  background-color: $login_button_background;
-  border: none;
-  border-radius: $border-radius;
+  border: border();
+  border-radius: border-radius();
+  min-width: $button_min_width;
+  min-height: $button_min_height;
   cursor: pointer;
-  min-width: $login_button_min_width;
-  min-height: $login_button_min_height;
-  margin: 0;
+  text-decoration: none;
+  box-shadow: none;
+}
 
-  $border-color: darken($button-color, 10%);
-  $active-color: darken($button-color, 15%);
+@mixin button-filled() {
+  @include base-button;
 
-  background: linear-gradient(to bottom, lighten($button-color, 2%), darken($button-color, 2%));
-  border-color: $border-color;
-  box-shadow:
-    inset 0 1px 0 0 lighten($button-color, 3%),
-    shadow(faint),
-    0 0 0 0 transparent;
+  background: background(primary);
   color: color(white);
 
   &:hover {
-    background: linear-gradient(to bottom, $button-color, darken($button-color, 5%));
-    border-color: $border-color;
-    color: color(white);
-    text-decoration: none;
+    background: background(gradiant);
+    border: border(hover);
   }
 
   &:focus {
-    border-color: $focus-color;
-    box-shadow:
-      inset 0 1px 0 0 lighten($button-color, 5%),
-      shadow(faint),
-      0 0 0 1px $focus-color;
+    border: border(focus);
   }
 
   &:active {
-    background: linear-gradient(to bottom, $border-color, $border-color);
-    border-color: $active-color;
-    box-shadow:
-      inset 0 0 0 0 transparent,
-      shadow(faint),
-      0 0 1px 0 $active-color;
+    background: background(gradiant);
+    border: border(active);
   }
 }
 
 @mixin button-filled-disabled($button-color) {
+  @include button-filled;
   @include recolor-icon(color(white));
+
   // Transition gradient to gradient to avoid flicker
-  background: linear-gradient(to bottom, lighten($button-color, 25%), lighten($button-color, 25%));
-  border-color: lighten($button-color, 20%);
-  box-shadow: none;
-  color: color(white);
+  background: background(gradiant);
+  border: border(light);
 }
 
-@mixin button-outline($outline-color) {
-  background: transparent;
-  border-color: rgba($outline-color, 0.4);
-  box-shadow: none;
-  color: darken($outline-color, 20%);
+@mixin button-outline() {
+  @include base-button;
+
+  background: background(transparent);
+  border: border(white);
+  color: color(white);
 
   &:hover {
-    background: rgba($outline-color, 0.05);
-    border-color: rgba($outline-color, 0.4);
+    background: background(gradiant);
   }
 
   &:focus {
-    border-color: rgba($outline-color, 0.8);
-    box-shadow: 0 0 0 1px rgba($outline-color, 0.8);
+    background: rgba(background(primary), 0.8);
   }
 
   &:active {
-    background: rgba($outline-color, 0.1);
-    box-shadow: none;
+    background: rgba(background(primary), 0.1);
   }
 }
 
