--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -53,9 +53,31 @@
 //   fail: $fail
 // );
 
-$border-radius: 4px;
+// $border-radius: 4px;
 
 // LOGIN PAGE
+
+$login-data: (
+  background: colour(primary),
+  checkbox: colour(primary),
+  header: (
+    background: colour(primary),
+    height: 95px,
+    shadow: shadow(transparent),
+    border: border(none),
+    padding: 0 0 1.5rem,
+    margin: 0
+  ),
+  box: (
+    header: colour(white),
+    background: colour(white),
+    border: border(dark),
+    shadow: shadow(),
+    width: 650px,
+    padding: 2rem,
+    margin: 0
+  )
+);
 
 $login_header: colour(primary);
 $login_header_height: 95px;
@@ -68,7 +90,7 @@ $login_box_header: #FFFFFF;
 $login_box_background: #FFFFFF;
 $login_box_border: 1px solid colour(background, dark);
 $login_text: #000000;
-$login_label_text_size: 0.9rem;
+$login_label_text_size: 1rem;
 $login_shadow: 0 20px 44px 0 rgba(119,135,139,0.6);
 $login_button_background: colour(primary);
 $login_button_min_width: 250px;
