--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -60,13 +60,15 @@
 $login-data: (
   background: colour(primary),
   checkbox: colour(primary),
+  shadow: shadow(),
   header: (
     background: colour(primary),
     height: 95px,
     shadow: shadow(transparent),
     border: border(none),
     padding: 0 0 1.5rem,
-    margin: 0
+    margin: 0,
+    text: 1rem
   ),
   box: (
     header: colour(white),
@@ -76,33 +78,44 @@ $login-data: (
     width: 650px,
     padding: 2rem,
     margin: 0
+  ),
+  mobile: (
+    margin: 0
+  ),
+  text: (
+    label: 1rem,
+    color: colour(primary, text)
+  ),
+  logo: (
+    margin: 0 2rem,
+    text: colour(white)
   )
 );
-
-$login_header: colour(primary);
-$login_header_height: 95px;
-$login_header_shadow: none;
-$login_header_border: 0px;
-$login_header_padding: 0 0 1.5rem;
-$login_header_text_size: 1rem;
-$login_background: colour(background, light);
-$login_box_header: #FFFFFF;
-$login_box_background: #FFFFFF;
-$login_box_border: 1px solid colour(background, dark);
-$login_text: #000000;
-$login_label_text_size: 1rem;
-$login_shadow: 0 20px 44px 0 rgba(119,135,139,0.6);
-$login_button_background: colour(primary);
-$login_button_min_width: 250px;
-$login_button_min_height: 50px;
-$login_box_min_width: 650px;
-$login_box_padding: 2rem;
-$login_box_margin: 0;
-$login_checkbox_colour: $login_button_background;
-$login_logo_text: #FFFFFF;
-$login_logo_margin: 1em;
-$login_mobile_header_margin: 0;
-
+//
+// $login_header: colour(primary);
+// $login_header_height: 95px;
+// $login_header_shadow: none;
+// $login_header_border: 0px;
+// $login_header_padding: 0 0 1.5rem;
+// $login_header_text_size: 1rem;
+// $login_background: colour(background, light);
+// $login_box_header: #FFFFFF;
+// $login_box_background: #FFFFFF;
+// $login_box_border: 1px solid colour(background, dark);
+// $login_text: #000000;
+// $login_label_text_size: 1rem;
+// $login_shadow: 0 20px 44px 0 rgba(119,135,139,0.6);
+// $login_button_background: colour(primary);
+// $login_button_min_width: 250px;
+// $login_button_min_height: 50px;
+// $login_box_min_width: 650px;
+// $login_box_padding: 2rem;
+// $login_box_margin: 0;
+// $login_checkbox_colour: $login_button_background;
+// $login_logo_text: #FFFFFF;
+// $login_logo_margin: 1em;
+// $login_mobile_header_margin: 0;
+//
 $signup_header: #FFFFFF;
 $signup_header_height: 95px;
 $signup_header_shadow: none;
@@ -122,7 +135,7 @@ $signup_button_min_height: 90px;
 $signup_box_min_width: 650px;
 $signup_box_padding: 2rem 2rem 0;
 $signup_box_margin: 0;
-$signup_checkbox_colour: $login_button_background;
+$signup_checkbox_colour: colour(primary);
 $signup_logo_text: #5C5C5C;
 $signup_logo_margin: 0 2rem;
 $signup_input_margin: 0.5rem;
