Refactor Login styles

--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -30,12 +30,12 @@ Enable the specific ones you want to use, do not enable all!
 }
 **/
 
-// @font-face {
-//   font-family: 'Montserrat-Regular';
-//   src: url('/fonts/Montserrat-Regular.ttf') format('truetype');
-//   font-weight: 400;
-//   font-style: normal;
-// }
+@font-face {
+  font-family: 'Montserrat-Regular';
+  src: url('/fonts/Montserrat-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
 //
 // @font-face {
 //   font-family: 'Montserrat-SemiBold';
@@ -104,7 +104,7 @@ Enable the specific ones you want to use, do not enable all!
 **/
 
 // html * {
-//   font-family: 'Montserrat-Regular', sans-serif;
+  // font-family: 'Montserrat-Regular', sans-serif;
 //   font-size: 1rem;
 //   font-weight: 400;
 //   line-height: 1.5;
