--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1,5 +1,5 @@
-@import 'styles/foundation';
-@import 'styles/mixins';
-@import 'styles/shared';
-@import 'styles/global';
-@import 'styles/components';
+// @import 'styles/foundation';
+// @import 'styles/mixins';
+// @import 'styles/shared';
+// @import 'styles/global';
+// @import 'styles/components';
