--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -1,3 +1,164 @@
+@import "./_fonts";
+// @import 'variables/palette';
+// @import "helpers/palette.scss";
+// @import "helpers/spacing.scss";
+// @import "helpers/utilities.scss";
+// @import 'variables/spacing';
+// @import 'variables/layout';
+// @import 'variables/buttons';
+// @import 'variables/typography';
+// @import 'variables/radius';
+// @import 'variables/borders';
+// @import 'variables/duration';
+// @import 'variables/easing';
+// @import 'variables/shadows';
+// @import 'variables/z-index';
+// @import 'variables/backgrounds';
+// @import 'variables/buttons';
+// @import 'helpers';
+@import "_mixins";
+@import "_forms";
+
+//COLORS
+
+// $primary: #5DB0FF;
+// $primary-dark: darken(#5DB0FF, 33%);
+// $primary-light: lighten(#5DB0FF, 30%);
+// $accent: darken(#5DB0FF, 20%);
+// $icons: #FFFFFF;
+// $primary-text: #212121;
+// $secondary-text: #fff;
+// $black: #000;
+// $divider: #BDBDBD;
+// $black: rgb(0, 0, 0);
+// $white: rgb(255, 255, 255);
+// $success: #8BC34A;
+// $warn: #FF5722;
+// $fail: #FF5252;
+// $light-bg: rgb(244,244,248);
+// $line: rgb(245,245,245);
+// $light-hover: rgb(246,246,246);
+//
+// $colors-map: (
+//   primary: $primary,
+//   primary-dark: $primary-dark,
+//   primary-light: $primary-light,
+//   accent: $accent,
+//   icons: $icons,
+//   primary-text: $primary-text,
+//   secondary-text: $secondary-text,
+//   divider: $divider,
+//   black: $black,
+//   white: $white,
+//   success: $success,
+//   fail: $fail
+// );
+
+// $border-radius: 4px;
+
+// LOGIN PAGE
+
+$login-data: (
+  background: colour(primary),
+  checkbox: colour(primary),
+  shadow: shadow(),
+  header: (
+    background: colour(primary),
+    height: 95px,
+    shadow: shadow(transparent),
+    border: border(none),
+    padding: 0 0 1.5rem,
+    margin: 0,
+    text: 1rem,
+    color: colour(white)
+  ),
+  box: (
+    header: colour(white),
+    background: colour(white),
+    border: border(),
+    shadow: shadow(),
+    width: 650px,
+    padding: spacing(loose),
+    margin: 0
+  ),
+  mobile: (
+    margin: 0
+  ),
+  text: (
+    label: 1rem,
+    color: colour(primary, text),
+    size: 1rem
+  ),
+  logo: (
+    margin: 0 2rem,
+    text: colour(white)
+  )
+);
+//
+// $login_header: colour(primary);
+// $login_header_height: 95px;
+// $login_header_shadow: none;
+// $login_header_border: 0px;
+// $login_header_padding: 0 0 1.5rem;
+// $login_header_text_size: 1rem;
+// $login_background: colour(background, light);
+// $login_box_header: #FFFFFF;
+// $login_box_background: #FFFFFF;
+// $login_box_border: 1px solid colour(background, dark);
+// $login_text: #000000;
+// $login_label_text_size: 1rem;
+// $login_shadow: 0 20px 44px 0 rgba(119,135,139,0.6);
+// $login_button_background: colour(primary);
+// $login_button_min_width: 250px;
+// $login_button_min_height: 50px;
+// $login_box_min_width: 650px;
+// $login_box_padding: 2rem;
+// $login_box_margin: 0;
+// $login_checkbox_colour: $login_button_background;
+// $login_logo_text: #FFFFFF;
+// $login_logo_margin: 1em;
+// $login_mobile_header_margin: 0;
+//
+$signup_header: #FFFFFF;
+$signup_header_height: 95px;
+$signup_header_shadow: none;
+$signup_header_border: 0px;
+$signup_header_padding: 0 0 1.5rem;
+$signup_header_text_size: 1rem;
+$signup_background: colour(background, light);
+$signup_box_header: #FFFFFF;
+$signup_box_background: #FFFFFF;
+$signup_box_border: 1px solid colour(background, dark);
+$signup_text: colour(primary);
+$signup_label_text_size: 0.85rem;
+$signup_shadow: 0 20px 44px 0 rgba(119,135,139,0.6);
+$signup_button_background: colour(primary);
+$signup_button_min_width: 280px;
+$signup_button_min_height: 90px;
+$signup_box_min_width: 650px;
+$signup_box_padding: 2rem 2rem 0;
+$signup_box_margin: 0;
+$signup_checkbox_colour: colour(primary);
+$signup_logo_text: #5C5C5C;
+$signup_logo_margin: 0 2rem;
+$signup_input_margin: 0.5rem;
+
+$header_background: colour(primary);
+
+$sidebar_border: 0;
+$sidebar-shadow: none;
+$sidebar_text_size: 1rem;
+$sidebar_menu_padding_top: 0em;
+$sidebar_hamburger_colour: #FFFFFF;
+$sidebar_icon_colour: colour(primary);
+$sidebar_icon_size: 20px;
+$sidebar_active_text_colour: colour(primary, dark);
+$sidebar_active_icon_colour: colour(primary, dark);
+$sidebar_active_text_font: 'Montserrat-SemiBold';
+$sidebar_sub_menu_background: colour(primary, light);
+
+@import "./_forms.scss";
+
 html,
 body {
   @include text-style-body;
