--- a/src/assets/sass/helpers/login.scss
+++ b/src/assets/sass/helpers/login.scss
@@ -5,8 +5,8 @@
     $fetched-element: $details;
 
     @if type-of($details) == map {
-      @if map-has-key($details, $value) {
-        $fetched-element: map-get($details, $value);
+      @if map-has-key($fetched-element, $value) {
+        $fetched-element: map-get($fetched-element, $value);
       }
     }
 
@@ -15,4 +15,3 @@
     @error 'Login element `#{$element} - #{$value}` not found. Available: #{available-names($login-data)}';
   }
 }
-
