Only load the form styles once

--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -157,7 +157,7 @@ $sidebar_active_icon_colour: colour(primary, dark);
 $sidebar_active_text_font: 'Montserrat-SemiBold';
 $sidebar_sub_menu_background: colour(primary, light);
 
-@import "./_forms.scss";
+// @import "./_forms.scss";
 
 html,
 body {
