--- a/src/assets/sass/mixins/layout.scss
+++ b/src/assets/sass/mixins/layout.scss
@@ -12,3 +12,9 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin flex-row {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
